qtdemux: Add MSE-style flush
@ntrrgc
Submitted by Alicia Boya García Link to original bug (#795424)
Description
The abort() method of SourceBuffer in Media Source Extensions is
expected to flush the demuxer and discard the current fragment,
if any. The configuration of tracks, if any, should be preserved.
qtdemux already has an implementation of flush events geared towards
seeks which is not compatible with this use case.
For this reason, a new type of flush is added, identified by the
presence of a media_source_extensions_flush
field in its FLUSH_STOP
structure that implements the behavior required by the MSE spec.